# mel-quantum-moviedb

./: .gitignore  LICENSE  README.md  pyproject.toml
src/mel_quantum_moviedb/: __init__.py  importer.py  query.py  tables.py
