[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "mel_quantum_moviedb"
version = "0.0.1"
authors = [
  { name="Meleneth", email="meleneth@gmail.com" }
]
description = "Use SQLAlchemy to import a movie db file from Quanum Apprentice"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "sqlalchemy"
]
[template.plugins.default]
src-layout = true
[project.urls]
Homepage = "https://github.com/meleneth/mel-quantum-moviedb"
Issues = "https://github.com/meleneth/mel-quantum-moviedb/issues"
[tool.hatch.build.targets.wheel]
packages = ["src/mel_quantum_moviedb"]
[project.scripts]
moviedb-import = "mel_quantum_moviedb.importer:import_files"
moviedb-query = "mel_quantum_moviedb.query:query_data"
